🚀 Major Update: Enterprise-Level Steam Rental Bot
✨ New Features:
- 🔐 AES-256 encryption for sensitive data
- 💳 YooKassa payment integration
- 🎭 Playwright-based Steam automation
- 👥 Advanced user management system
- 📊 Enhanced analytics and monitoring
- 🛡️ Improved security and access control

🔧 Improvements:
- Fixed requirements.txt dependencies
- Enhanced database schema with payment tables
- Added comprehensive documentation
- Improved error handling and logging
- Better Steam Guard code generation

📚 Documentation:
- USER_GUIDE.md - Complete user manual
- QUICK_START.md - 5-minute setup guide
- INSTALLATION_GUIDE.md - Detailed installation
- ENHANCED_FEATURES.md - New features overview

🎯 Ready for production use with enterprise-level features!

--- a/requirements.txt
+++ b/requirements.txt
@@ -71,6 +71,9 @@ rsa==4.7
 # ASN.1 кодирование
 pyasn1==0.6.1
 
+# Продвинутое шифрование
+cryptography==42.0.8
+
 # ========================================
 # СЕРИАЛИЗАЦИЯ И ВАЛИДАЦИЯ
 # ========================================
@@ -142,7 +145,34 @@ pyreadline3==3.5.4
 # ========================================
 
 # Selenium для автоматизации браузера
-selenium
+selenium==4.15.0
+
+# Playwright для продвинутой автоматизации
+playwright==1.44.0
+
+# ========================================
+# ПЛАТЕЖИ И ПОДПИСКИ
+# ========================================
+
+# YooKassa SDK
+yookassa==2.3.0
+
+# ========================================
+# УПРАВЛЕНИЕ ПОЛЬЗОВАТЕЛЯМИ
+# ========================================
+
+# Работа с датами
+python-dateutil==2.8.2
+
+# Валидация данных (уже указана выше)
+# pydantic==2.5.0
+
+# ========================================
+# ДОПОЛНИТЕЛЬНЫЕ УТИЛИТЫ
+# ========================================
+
+# Работа с JSON (быстрая альтернатива)
+ujson==5.8.0
 
 # ========================================
 # MQTT (если нужен)
