--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pyTelegramBotAPI==4.15.2
 # HTTP запросы
 requests==2.31.0
 requests-toolbelt==1.0.0
+urllib3==1.26.18
 
 # Асинхронное программирование
 aiohttp==3.10.2
